--- a/AR-Table-Tennis/AR-Table-Tennis/Base.lproj/Main.storyboard
+++ b/AR-Table-Tennis/AR-Table-Tennis/Base.lproj/Main.storyboard
@@ -1,24 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
     <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Scene View Controller-->
+        <!--View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="SceneViewController" customModule="AR_Table_Tennis" customModuleProvider="target" sceneMemberID="viewController">
-                    <sceneKitView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="9tN-lt-n7W">
+                <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="AR_Table_Tennis" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="k7W-jO-VB6">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </sceneKitView>
+                        <subviews>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k0v-nR-o8n">
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                            </arscnView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="rfy-m9-dfO">
+                                <rect key="frame" x="33.5" y="289" width="600" height="56"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.74917059075342463" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="gTK-ai-8s5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rfy-m9-dfO" firstAttribute="width" secondItem="k7W-jO-VB6" secondAttribute="width" multiplier="0.9" id="5IP-Jb-89X"/>
+                            <constraint firstItem="rfy-m9-dfO" firstAttribute="centerX" secondItem="k7W-jO-VB6" secondAttribute="centerX" id="BRr-UT-85i"/>
+                            <constraint firstItem="k0v-nR-o8n" firstAttribute="top" secondItem="0rh-10-cA2" secondAttribute="top" id="HcZ-p7-6Au"/>
+                            <constraint firstAttribute="bottom" secondItem="rfy-m9-dfO" secondAttribute="bottom" constant="30" id="HiB-Jc-0zg"/>
+                            <constraint firstItem="k0v-nR-o8n" firstAttribute="trailing" secondItem="0rh-10-cA2" secondAttribute="trailing" id="VOX-nb-cNF"/>
+                            <constraint firstItem="k0v-nR-o8n" firstAttribute="leading" secondItem="0rh-10-cA2" secondAttribute="leading" id="aVB-S7-Bg3"/>
+                            <constraint firstItem="k0v-nR-o8n" firstAttribute="bottom" secondItem="0rh-10-cA2" secondAttribute="bottom" id="h7M-QW-UHw"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0rh-10-cA2"/>
+                    </view>
+                    <connections>
+                        <outlet property="scnView" destination="k0v-nR-o8n" id="dZb-oT-fyd"/>
+                        <outlet property="statusLabel" destination="rfy-m9-dfO" id="ZFI-pl-oxj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="106.59670164917542" y="117.59999999999999"/>
         </scene>
     </scenes>
 </document>
