--- a/AR-Table-Tennis/AR-Table-Tennis/Base.lproj/Main.storyboard
+++ b/AR-Table-Tennis/AR-Table-Tennis/Base.lproj/Main.storyboard
@@ -31,20 +31,30 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Crosshair" translatesAutoresizingMaskIntoConstraints="NO" id="Wgm-Ne-muk">
+                                <rect key="frame" x="317" y="171" width="32" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="MJB-uu-5No"/>
+                                    <constraint firstAttribute="height" constant="32" id="XMz-Tg-EJh"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Wgm-Ne-muk" firstAttribute="centerX" secondItem="k7W-jO-VB6" secondAttribute="centerX" id="3qv-zi-xPH"/>
                             <constraint firstItem="rfy-m9-dfO" firstAttribute="width" secondItem="k7W-jO-VB6" secondAttribute="width" multiplier="0.9" id="5IP-Jb-89X"/>
+                            <constraint firstItem="k0v-nR-o8n" firstAttribute="trailing" secondItem="0rh-10-cA2" secondAttribute="trailing" id="6Ga-OZ-am9"/>
+                            <constraint firstItem="Wgm-Ne-muk" firstAttribute="centerY" secondItem="k7W-jO-VB6" secondAttribute="centerY" id="76H-fo-BVE"/>
                             <constraint firstItem="rfy-m9-dfO" firstAttribute="centerX" secondItem="k7W-jO-VB6" secondAttribute="centerX" id="BRr-UT-85i"/>
                             <constraint firstItem="k0v-nR-o8n" firstAttribute="top" secondItem="0rh-10-cA2" secondAttribute="top" id="HcZ-p7-6Au"/>
                             <constraint firstAttribute="bottom" secondItem="rfy-m9-dfO" secondAttribute="bottom" constant="30" id="HiB-Jc-0zg"/>
-                            <constraint firstItem="k0v-nR-o8n" firstAttribute="trailing" secondItem="0rh-10-cA2" secondAttribute="trailing" id="VOX-nb-cNF"/>
                             <constraint firstItem="k0v-nR-o8n" firstAttribute="leading" secondItem="0rh-10-cA2" secondAttribute="leading" id="aVB-S7-Bg3"/>
                             <constraint firstItem="k0v-nR-o8n" firstAttribute="bottom" secondItem="0rh-10-cA2" secondAttribute="bottom" id="h7M-QW-UHw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0rh-10-cA2"/>
                     </view>
                     <connections>
+                        <outlet property="crosshair" destination="Wgm-Ne-muk" id="Mf3-vg-1Oh"/>
                         <outlet property="scnView" destination="k0v-nR-o8n" id="dZb-oT-fyd"/>
                         <outlet property="statusLabel" destination="rfy-m9-dfO" id="ZFI-pl-oxj"/>
                     </connections>
@@ -54,4 +64,7 @@
             <point key="canvasLocation" x="106.59670164917542" y="117.59999999999999"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Crosshair" width="128" height="128"/>
+    </resources>
 </document>
