--- a/AR-Table-Tennis/AR-Table-Tennis/Base.lproj/Main.storyboard
+++ b/AR-Table-Tennis/AR-Table-Tennis/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
-    <device id="ipad10_5" orientation="landscape">
+    <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,14 +15,14 @@
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="AR_Table_Tennis" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k7W-jO-VB6">
-                        <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k0v-nR-o8n">
-                                <rect key="frame" x="0.0" y="20" width="1112" height="814"/>
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                             </arscnView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="rfy-m9-dfO">
-                                <rect key="frame" x="55.5" y="748" width="1001" height="56"/>
+                                <rect key="frame" x="33.5" y="289" width="600" height="56"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.74917059075342463" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="56" id="gTK-ai-8s5"/>
@@ -32,14 +32,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Crosshair" translatesAutoresizingMaskIntoConstraints="NO" id="Wgm-Ne-muk">
-                                <rect key="frame" x="540" y="401" width="32" height="32"/>
+                                <rect key="frame" x="317.5" y="171.5" width="32" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="32" id="MJB-uu-5No"/>
                                     <constraint firstAttribute="height" constant="32" id="XMz-Tg-EJh"/>
                                 </constraints>
                             </imageView>
-                            <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="kF2-nH-ILj">
-                                <rect key="frame" x="371" y="15" width="370" height="40"/>
+                            <label hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="kF2-nH-ILj">
+                                <rect key="frame" x="222.5" y="15" width="222" height="40"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.75294306506849318" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="dTL-ad-qEd"/>
@@ -48,37 +48,68 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V5W-er-MRo">
+                                <rect key="frame" x="577" y="157.5" width="60" height="60"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.74917059075342463" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="NU6-wP-6XX"/>
+                                    <constraint firstAttribute="height" constant="60" id="jAp-10-3w1"/>
+                                </constraints>
+                                <state key="normal" image="Arrow"/>
+                                <connections>
+                                    <action selector="nextButtonTouched:" destination="BV1-FR-VrT" eventType="touchUpInside" id="oTe-MJ-aW9"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c1b-WL-r35" userLabel="Reset Button">
+                                <rect key="frame" x="15" y="15" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="IuU-YP-f8e"/>
+                                    <constraint firstAttribute="width" constant="30" id="YOy-4C-EeY"/>
+                                </constraints>
+                                <state key="normal" image="Reset"/>
+                                <connections>
+                                    <action selector="resetButtonTouched:" destination="BV1-FR-VrT" eventType="touchUpInside" id="IVy-L6-Xgh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="V5W-er-MRo" secondAttribute="trailing" constant="30" id="0uU-7O-rxj"/>
                             <constraint firstItem="Wgm-Ne-muk" firstAttribute="centerX" secondItem="k7W-jO-VB6" secondAttribute="centerX" id="3qv-zi-xPH"/>
                             <constraint firstItem="rfy-m9-dfO" firstAttribute="width" secondItem="k7W-jO-VB6" secondAttribute="width" multiplier="0.9" id="5IP-Jb-89X"/>
-                            <constraint firstItem="k0v-nR-o8n" firstAttribute="trailing" secondItem="0rh-10-cA2" secondAttribute="trailing" id="6Ga-OZ-am9"/>
                             <constraint firstItem="Wgm-Ne-muk" firstAttribute="centerY" secondItem="k7W-jO-VB6" secondAttribute="centerY" id="76H-fo-BVE"/>
                             <constraint firstItem="rfy-m9-dfO" firstAttribute="centerX" secondItem="k7W-jO-VB6" secondAttribute="centerX" id="BRr-UT-85i"/>
+                            <constraint firstAttribute="bottom" secondItem="k0v-nR-o8n" secondAttribute="bottom" id="DzM-TO-42t"/>
                             <constraint firstItem="kF2-nH-ILj" firstAttribute="centerX" secondItem="k7W-jO-VB6" secondAttribute="centerX" id="HKZ-a6-K7O"/>
-                            <constraint firstItem="k0v-nR-o8n" firstAttribute="top" secondItem="0rh-10-cA2" secondAttribute="top" id="HcZ-p7-6Au"/>
                             <constraint firstAttribute="bottom" secondItem="rfy-m9-dfO" secondAttribute="bottom" constant="30" id="HiB-Jc-0zg"/>
+                            <constraint firstAttribute="trailing" secondItem="k0v-nR-o8n" secondAttribute="trailing" id="IOS-cH-aq3"/>
                             <constraint firstItem="kF2-nH-ILj" firstAttribute="width" secondItem="k7W-jO-VB6" secondAttribute="width" multiplier="0.333" id="KM2-vu-vLy"/>
+                            <constraint firstItem="c1b-WL-r35" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" constant="15" id="P11-xg-WBJ"/>
                             <constraint firstItem="kF2-nH-ILj" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" constant="15" id="PS7-kr-2zJ"/>
-                            <constraint firstItem="k0v-nR-o8n" firstAttribute="leading" secondItem="0rh-10-cA2" secondAttribute="leading" id="aVB-S7-Bg3"/>
-                            <constraint firstItem="k0v-nR-o8n" firstAttribute="bottom" secondItem="0rh-10-cA2" secondAttribute="bottom" id="h7M-QW-UHw"/>
+                            <constraint firstItem="k0v-nR-o8n" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" id="Uts-cf-fKZ"/>
+                            <constraint firstItem="k0v-nR-o8n" firstAttribute="leading" secondItem="k7W-jO-VB6" secondAttribute="leading" id="o76-BV-2at"/>
+                            <constraint firstItem="V5W-er-MRo" firstAttribute="centerY" secondItem="k7W-jO-VB6" secondAttribute="centerY" id="xf8-Ha-vhV"/>
+                            <constraint firstItem="c1b-WL-r35" firstAttribute="leading" secondItem="k7W-jO-VB6" secondAttribute="leading" constant="15" id="xrr-aa-uN7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0rh-10-cA2"/>
                     </view>
                     <connections>
                         <outlet property="crosshair" destination="Wgm-Ne-muk" id="Mf3-vg-1Oh"/>
                         <outlet property="errorLabel" destination="kF2-nH-ILj" id="UBi-gH-Zx0"/>
+                        <outlet property="progressButton" destination="V5W-er-MRo" id="Ocw-bL-Pxx"/>
+                        <outlet property="resetButton" destination="c1b-WL-r35" id="Qx4-gO-kPW"/>
                         <outlet property="scnView" destination="k0v-nR-o8n" id="dZb-oT-fyd"/>
                         <outlet property="statusLabel" destination="rfy-m9-dfO" id="ZFI-pl-oxj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="106.59670164917542" y="117.59999999999999"/>
+            <point key="canvasLocation" x="100.2717391304348" y="108.69565217391305"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Arrow" width="1000" height="1000"/>
         <image name="Crosshair" width="128" height="128"/>
+        <image name="Reset" width="1000" height="1000"/>
     </resources>
 </document>
