--- a/AR Ping Pong/AR Ping Pong/Base.lproj/Main.storyboard
+++ b/AR Ping Pong/AR Ping Pong/Base.lproj/Main.storyboard
@@ -4,16 +4,59 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="Ue7-wh-1NC">
+            <objects>
+                <viewController id="PuY-vG-7rY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8no-7S-1Ng">
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="13z-Q0-qwh">
+                                <rect key="frame" x="587" y="20" width="60" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="hardButton:" destination="ehq-fw-e3q" eventType="touchUpInside" id="KGO-Qz-849"/>
+                                    <action selector="test:" destination="ehq-fw-e3q" eventType="touchUpInside" id="Gxd-xD-DKP"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M99-kp-xbw">
+                                <rect key="frame" x="587" y="68" width="60" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="mediumButton:" destination="ehq-fw-e3q" eventType="touchUpInside" id="CHb-EQ-JkS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xba-j1-m0p">
+                                <rect key="frame" x="587" y="116" width="60" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="easyButton:" destination="ehq-fw-e3q" eventType="touchUpInside" id="oIo-eN-xhM"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="9xp-7Y-ub2"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bqN-Bh-ToB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ehq-fw-e3q" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="300.89955022488761" y="-802.39999999999998"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="AR_Table_Tennis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="AR_Ping_Pong" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k7W-jO-VB6">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -71,11 +114,22 @@
                                     <action selector="resetButtonTouched:" destination="BV1-FR-VrT" eventType="touchUpInside" id="IVy-L6-Xgh"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="PQn-nC-O1z" userLabel="Score Label">
+                                <rect key="frame" x="167" y="15" width="333.5" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.75294306509999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="xON-gA-fYZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="V5W-er-MRo" secondAttribute="trailing" constant="30" id="0uU-7O-rxj"/>
                             <constraint firstItem="Wgm-Ne-muk" firstAttribute="centerX" secondItem="k7W-jO-VB6" secondAttribute="centerX" id="3qv-zi-xPH"/>
+                            <constraint firstItem="PQn-nC-O1z" firstAttribute="centerX" secondItem="k7W-jO-VB6" secondAttribute="centerX" id="5Bg-JK-Guc"/>
                             <constraint firstItem="rfy-m9-dfO" firstAttribute="width" secondItem="k7W-jO-VB6" secondAttribute="width" multiplier="0.9" id="5IP-Jb-89X"/>
                             <constraint firstItem="Wgm-Ne-muk" firstAttribute="centerY" secondItem="k7W-jO-VB6" secondAttribute="centerY" id="76H-fo-BVE"/>
                             <constraint firstItem="rfy-m9-dfO" firstAttribute="centerX" secondItem="k7W-jO-VB6" secondAttribute="centerX" id="BRr-UT-85i"/>
@@ -87,6 +141,8 @@
                             <constraint firstItem="c1b-WL-r35" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" constant="15" id="P11-xg-WBJ"/>
                             <constraint firstItem="kF2-nH-ILj" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" constant="15" id="PS7-kr-2zJ"/>
                             <constraint firstItem="k0v-nR-o8n" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" id="Uts-cf-fKZ"/>
+                            <constraint firstItem="PQn-nC-O1z" firstAttribute="top" secondItem="k7W-jO-VB6" secondAttribute="top" constant="15" id="bVc-hS-1PM"/>
+                            <constraint firstItem="PQn-nC-O1z" firstAttribute="width" secondItem="k7W-jO-VB6" secondAttribute="width" multiplier="0.5" id="hVq-v4-Fgu"/>
                             <constraint firstItem="k0v-nR-o8n" firstAttribute="leading" secondItem="k7W-jO-VB6" secondAttribute="leading" id="o76-BV-2at"/>
                             <constraint firstItem="V5W-er-MRo" firstAttribute="centerY" secondItem="k7W-jO-VB6" secondAttribute="centerY" id="xf8-Ha-vhV"/>
                             <constraint firstItem="c1b-WL-r35" firstAttribute="leading" secondItem="k7W-jO-VB6" secondAttribute="leading" constant="15" id="xrr-aa-uN7"/>
@@ -99,12 +155,13 @@
                         <outlet property="progressButton" destination="V5W-er-MRo" id="Ocw-bL-Pxx"/>
                         <outlet property="resetButton" destination="c1b-WL-r35" id="Qx4-gO-kPW"/>
                         <outlet property="scnView" destination="k0v-nR-o8n" id="dZb-oT-fyd"/>
+                        <outlet property="scoreLabel" destination="PQn-nC-O1z" id="AqJ-7b-p54"/>
                         <outlet property="statusLabel" destination="rfy-m9-dfO" id="ZFI-pl-oxj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="100.2717391304348" y="108.69565217391305"/>
+            <point key="canvasLocation" x="99.400299850074973" y="108"/>
         </scene>
     </scenes>
     <resources>
